--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>💰Siller.app</title>
   </head>
   <body class="d-flex flex-column h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -46,9 +46,9 @@
     -->
   </body>
 
-  <footer class="footer mt-auto py-3 bg-light">
+  <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">Place sticky footer content here.</span>
+      Place sticky footer content here.
     </div>
   </footer>
 </html>
